src/test/ui/const-generics/generic_const_exprs/issue-62504.min.stderr
error[E0282]: type annotations needed for `ArrayHolder<{_: usize}>`
  --> $DIR/issue-62504.rs:26:21
   |
LL |     let mut array = ArrayHolder::new();
   |         ---------   ^^^^^^^^^^^^^^^^ cannot infer the value of const parameter `X`
   |         |
   |         consider giving `array` the explicit type `ArrayHolder<X>`, where the const parameter `X` is specified

error[E0308]: mismatched types
  --> $DIR/issue-62504.rs:18:21
   |
LL |         ArrayHolder([0; Self::SIZE])
   |                     ^^^^^^^^^^^^^^^ expected `X`, found `Self::SIZE`
   |
   = note: expected array `[u32; X]`
              found array `[u32; _]`

error: constant expression depends on a generic parameter
  --> $DIR/issue-62504.rs:18:25
   |
LL |         ArrayHolder([0; Self::SIZE])
   |                         ^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0282, E0308.
For more information about an error, try `rustc --explain E0282`.
